Styled Range Inputs and fixed artboard display on Safari

--- a/src/App.css
+++ b/src/App.css
@@ -108,8 +108,17 @@
   font-size: 10px;
   padding: 0px;
 }
-
-
+.art-container{
+  max-width: 600px;
+}
+.controls h3{
+ display: flex;
+}
+.controls h3 span:first-child{
+  margin-top: -3px;
+  padding-right: 2px;
+  font-size: 36px;
+}
 .state-data{
   display: none;
   color: white;
@@ -119,4 +128,93 @@
 .range-container span{
   min-width: 20px;
 }
-
+/* INPUT RANGE SLIDER STYLES */
+input[type=range] {
+  -webkit-appearance: none;
+  margin: 10px 3px;
+  width: 100%;
+  background-color: transparent;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height:  4px; /* 8.4px; */
+  cursor: pointer;
+  /* animate: 0.2s; */
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: gray; /* #367ebd; */;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 16px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -8px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #ffffff; /* #367ebd; */
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 4px;
+  cursor: pointer;
+  /* animate: 0.2s; */
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: gray; /* #367ebd; */
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 16px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  /* animate: 0.2s; */
+  background: transparent;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #2a6495;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-fill-upper {
+  background: #3071a9;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 16px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: gray; /* #367ebd; */;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: gray; /* #367ebd; */;
+}
